# COMP7005-Assn1

./: CMakeLists.txt  README
doc/: Client_Pseudocode.docx  Client_Tests.docx  README  Server_Pseudocode.docx  Server_Tests.docx  protocol  ~$ient_Pseudocode.docx  ~$ient_Tests.docx
include/client/: client.h
include/server/: server.h
include/util/: boost_net_interface.hpp  file_transfer.hpp  net_interface.h  packet.hpp  ports.h  protocol.hpp
lib/: libboost_filesystem.so.1.61.0  libboost_system.so.1.61.0
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  main.cpp
src/server/: CMakeLists.txt  main.cpp  server.cpp
